SMTP Mail App name changed

--- a/flask_user/templates/flask_user/emails/confirm_email_message.html
+++ b/flask_user/templates/flask_user/emails/confirm_email_message.html
@@ -1,6 +1,7 @@
 {% extends 'flask_user/emails/base_message.html' %}
 
 {% block message %}
+<h4> Welcome to Oreo Story....</h4>
 <p>You will need to confirm your email to start using {{ app_name }}.</p>
 
 <p>If you initiated this confirmation, please click on the link below:<br/>
