--- a/flask_user/templates/flask_user/emails/forgot_password_message.html
+++ b/flask_user/templates/flask_user/emails/forgot_password_message.html
@@ -1,7 +1,7 @@
 {% extends 'flask_user/emails/base_message.html' %}
 
 {% block message %}
-
+<h4>Oreo Stories...</h4>
 <p>We have received your password reset request.</p>
 
 <p>If you initiated this request, please click on the link below:<br/>
