--- a/flask_user/templates/flask_user/emails/invite_message.html
+++ b/flask_user/templates/flask_user/emails/invite_message.html
@@ -1,7 +1,7 @@
 {% extends 'flask_user/emails/base_message.html' %}
 
 {% block message %}
-
+<h4>Oreo Stories...</h4>
 <p>You have been invited to join {{ app_name }}!</p>
 
 <p>To register an account, please click on the link below:<br/>
